fix the alignment of contact information text

--- a/assets/style.css
+++ b/assets/style.css
@@ -370,7 +370,7 @@ h3 {
 form {
 
   color: #fff;
-  background-color: rgba(75, 56, 97, 0.6);
+  background-color: rgba(75, 56, 97, 0.7);
   width: 60%;
   height: 60%;
   padding: 30px;
